# my-dnd-world

.github/workflows/: deploy.yml
articles/: home.md
resources/articles/: characters.md  home.md  second.md  world.md
resources/articles/campaigns/: .list.json
resources/articles/campaigns/Tournament/: session_1.md
resources/articles/campaigns/Tournament of Might&Magic/: .desc.json
resources/articles/campaigns/Tournament_of_Might&Magic/: campaign.md
resources/articles/characters/: .list.json  Dafna.md  Maximilian.md  Nitros.md  Xelchpakh.md
resources/articles/nitros/: goo_upgrade.md
resources/characters/: 0.json
website/: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json  tailwind.config.js
website/assets/: cs.html  example.json  hello.md  main.css  md.css  tailwind.css
website/src/: character.rs  main.rs  markdown.rs  nav.rs  world.rs
website/src/props/: character.rs  damage.rs  mod.rs
website/src/props/equipment/: armor.rs  mod.rs  weapon.rs
