[package]
name = "website"
version = "0.1.0"
authors = ["user"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["logger", "router"] }
reqwest = { version = "*" }
pulldown-cmark = "0.12"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
